[project]
name = "torch_131765"
version = "0.1.0"
description = "Repro of pytorch/issues/131765"
authors = [{ name = "Randolf Scholz", email = "randolf.scholz@gmail.com" }]
dependencies = ["torch==2.4.0", "pyright==1.1.374"]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }
